<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Farmaluxa</string>

<!--    MESSAGE ERROR-->
    <string name="PM_0000">OK</string>
    <string name="PM_0001">Error de comunicaciones.</string>
    <string name="service_error_null_response">Sin respuesta.</string>
    <string name="service_error_not_data">Sin información.</string>
    <string name="service_error_unknown">Error desconocido.</string>
    <string name="service_error_get_device_id">Error al obtener Device ID.</string>
    <string name="service_error_invalidate_session">No se tiene una sesión activa.</string>
    <string name="service_error_time_out">Se ha agotado el tiempo de espera.</string>
    <string name="service_error_not_connected">La conexión a Internet parece estar desactivada.</string>
    <string name="service_error_communications">Error de comunicaciones.</string>
<!--    -->

<!--    ALERT DIALOG-->
    <string name="str_title_alert">Aviso</string>
    <string name="str_cancel">Cancelar</string>
    <string name="str_accept">Aceptar</string>

    <!-- LOGIN -->
    <string name="str_welcome">Bienvenido</string>
    <string name="str_login_title">Inicia sesión para comenzar</string>
    <string name="str_user">Usuario</string>
    <string name="str_password">Contraseña</string>
    <string name="str_login">Iniciar sesión</string>
    <string name="whatsapp_is_not_installed">WhatsApp no está instalado</string>
    <string name="str_not_account">¿No tienes una cuenta? <font fgcolor='#5C84FF'>Registrate</font></string>

    <!-- HEADER_REQUISITION -->
    <string name="desc_menu">Menú requisición</string>
    <string name="desc_add_products">Agregar productos</string>
    <string name="desc_advanced_filter">Aplicar otro filtro</string>

    <!-- NAVIGATION_DRAWER -->
    <string name="str_close_app">Cerrar sesión</string>

    <string name="desc_image_profile">Imagen del usuario loqueado</string>

    <!-- HEADER_NEW_PRODUCT -->
    <string name="str_title_new_product">Alta producto</string>
    <string name="desc_close_button_dialog_new_product">Cerrar vista alta de productos</string>

    <!--    Product Supply-->
    <string name="str_number_requisition">Num. requisicion:</string>
    <string name="str_application_date">Fecha de solicitud:</string>
    <string name="str_observations">Observaciones:</string>
    <string name="str_request_amount">Cantidad solicitada:</string>
    <string name="str_stocked_amount">Cantidad surtida:</string>
    <string name="str_scan">Escanear código</string>
    <string name="str_out_stock">Sin existencia</string>
    <string name="str_out_supply">Surtir</string>
    <string name="str_full_requisition">Requision completa</string>

</resources>