<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_ten"
    android:elevation="@dimen/dimen_five"
    android:padding="@dimen/dimen_ten"
    app:cardCornerRadius="@dimen/dimen_ten">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_ten">

        <TextView
            android:id="@+id/tvSupply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_five"
            android:fontFamily="@font/bevietnampro_black"
            android:text="AC Fast"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_twenty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitleRequestAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_ten"
            android:fontFamily="@font/bevietnampro_black"
            android:text="@string/str_request_amount"
            android:textColor="@color/blue_primary"
            android:textSize="@dimen/txt_eighteen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSupply" />

        <TextView
            android:id="@+id/tvRequestAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/txt_fifteen"
            android:fontFamily="@font/bevietnampro_black"
            android:text="99999"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_eighteen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTitleRequestAmount"
            app:layout_constraintTop_toTopOf="@+id/tvTitleRequestAmount" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRequestAmount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_ten"
            android:hint="@string/str_stocked_amount"
            app:hintTextColor="@color/blue_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleRequestAmount">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnScan"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_ten"
            android:textAllCaps="false"
            android:padding="@dimen/dimen_fifteen"
            android:text="@string/str_scan"
            app:cornerRadius="@dimen/dimen_fifteen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilRequestAmount"
            app:strokeColor="@color/blue_primary" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_fifteen"
            android:textAllCaps="false"
            android:text="@string/str_out_supply"
            android:textColor="@color/color_green"
            app:cornerRadius="@dimen/dimen_fifteen"
            app:layout_constraintStart_toEndOf="@+id/btnScan"
            app:layout_constraintEnd_toStartOf="@+id/btnOutstock"
            app:layout_constraintTop_toTopOf="@+id/btnScan"
            app:strokeColor="@color/color_green" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOutstock"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_fifteen"
            android:textAllCaps="false"
            android:text="@string/str_out_stock"
            android:textColor="@color/color_red_500"
            app:cornerRadius="@dimen/dimen_fifteen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnScan"
            app:strokeColor="@color/color_red_500" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>