<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/dimen_ten"
    android:elevation="@dimen/dimen_five"
    android:padding="@dimen/dimen_ten"
    app:cardCornerRadius="@dimen/dimen_ten">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_ten">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_five"
            android:fontFamily="@font/bevietnampro_black"
            tools:text="AC Fast"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_twenty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitleRequestAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_ten"
            android:fontFamily="@font/bevietnampro_black"
            android:text="@string/str_request_amount"
            android:textColor="@color/blue_primary"
            android:textSize="@dimen/txt_eighteen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProduct" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvRequestAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/txt_fifteen"
            android:fontFamily="@font/bevietnampro_black"
            tools:text="99999"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_eighteen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTitleRequestAmount"
            app:layout_constraintTop_toTopOf="@+id/tvTitleRequestAmount" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRequestAmount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_delivery_dining"
            app:startIconTint="@color/blue_primary"
            android:layout_marginTop="@dimen/dimen_ten"
            android:hint="@string/str_stocked_amount"
            app:boxCornerRadiusBottomEnd="@dimen/dimen_fifteen"
            app:boxCornerRadiusBottomStart="@dimen/dimen_fifteen"
            app:boxCornerRadiusTopEnd="@dimen/dimen_fifteen"
            app:boxCornerRadiusTopStart="@dimen/dimen_fifteen"
            app:hintTextColor="@color/blue_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleRequestAmount">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilScanCode"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_center_focus"
            app:startIconTint="@color/blue_primary"
            android:layout_marginTop="@dimen/dimen_ten"
            app:boxCornerRadiusBottomEnd="@dimen/dimen_fifteen"
            app:boxCornerRadiusBottomStart="@dimen/dimen_fifteen"
            app:boxCornerRadiusTopEnd="@dimen/dimen_fifteen"
            app:boxCornerRadiusTopStart="@dimen/dimen_fifteen"
            android:hint="@string/str_scan"
            app:hintTextColor="@color/blue_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilRequestAmount">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>